@@ -5,6 +5,8 @@
 * Dev - Removed superfluous spaces in several translations.
 * Dev - Removed superfluous spaces in code and text.
 * Add - Added support for the class and submit_class shortcode parameters to the [groups_join] shortcode.
+* Add - Added support for the class and submit_class shortcode parameters to the [groups_leave] shortcode.
+* Fix - Fixed inappropriate class used for the container of the [groups_leave] shortcode.
 
 2025-04-20 - version 3.5.0
 * Update - WordPress 6.8 compatible.
